Wire Sequence Sequence LFA fixes and dark mode

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -3971,6 +3971,20 @@ path.city-planning {
 			font-size: 40px;
 			text-anchor: middle;
 		}
+/* Wire Sequence Sequence */
+	svg.wire-sequence-sequence {
+		width: 25%;
+	}
+		.dark-mode svg.wire-sequence-sequence rect {
+			stroke: #fff5;
+		}
+		.dark-mode svg.wire-sequence-sequence text {
+			fill: #dcdcdc;
+		}
+		.dark-mode svg.wire-sequence-sequence line {
+			filter: drop-shadow(0 0 2px #fff);
+			-webkit-filter: drop-shadow(0 0 2px #fff);
+		}
 /* Wavetapping */
 	svg.wavetapping {
 		display: block;
